turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: type mismatch;
 found   : java.awt.Color
 required: Int
	val a = rule(state)(x)(0)
                            ^Turmite:14: error: type mismatch;
 found   : java.awt.Color
 required: Int
	val b = rule(state)(x)(1)
                            ^Turmite:15: error: type mismatch;
 found   : java.awt.Color
 required: Int
	val c = rule(state)(x)(2)
                            ^